# lightweight-iot-client

./: CMakeCache.txt  Hello-World.txt  Makefile  README  README.md  cmake_install.cmake  do_launchpad  do_leshan  mymake
coap/: block.c  transaction.c
coap/er-coap-13/: er-coap-13.c
core/: internals.h  liblwm2m.c  management.c  objects.c  observe.c  packet.c  registration.c  utils.c
data/: tlv.c
examples/client/: CMakeLists.txt  README  a1.h  a2.h  a3.h  a4.h  addons.h  exp_objects  exp_objects.c  lwm2mclient.c  lwm2mclient.h  mysql_template.c  mysql_template.h  object.gen  object.in  object_connectivity_moni.c  object_device.c  object_mysql_1.c  object_mysql_1.h  object_mysql_10.c  object_mysql_10.h  object_mysql_11.c  object_mysql_11.h  object_mysql_12.c  object_mysql_12.h  object_mysql_13.c  object_mysql_13.h  object_mysql_14.c  object_mysql_14.h  object_mysql_15.c  object_mysql_15.h  object_mysql_16.c  object_mysql_16.h  object_mysql_17.c  object_mysql_17.h  object_mysql_18.c  object_mysql_18.h  object_mysql_19.c  object_mysql_19.h  object_mysql_2.c  (+21 more)
examples/client/Object-Registry/: 10271.dat.list  10280.dat.list  3303.info  3303.xml  README  conv  doget  list-objects  resources  subscriptions
examples/shared/: connection.c  dtlsconnection.c
examples/shared/tinydtls/: Makefile  config.status  configure  dtls_config.h.in
examples/shared/tinydtls/aes/: Makefile
examples/shared/tinydtls/autom4te.cache/: output.0  requests  traces.0
examples/shared/tinydtls/doc/: Makefile
examples/shared/tinydtls/ecc/: Makefile
examples/shared/tinydtls/sha2/: Makefile
examples/shared/tinydtls/tests/: Makefile
python/: gen_data
sqlite3/: create_db  database.sqlite3  info  myget  myget.c  structure_db
